fixed contact info font size on small screens and automatically hide the nav menu on click

--- a/hunters/styles/custom.css
+++ b/hunters/styles/custom.css
@@ -297,6 +297,7 @@ body {
     .center-content {
         width: 80%;
         padding-bottom: 10px;
+        font-size: 12px;
     }
 }
 
